test/negative/t8.mli.expected

*******************************
********** Parsed file ********
*******************************
[@@@gospel {| function rec f (x:bool): bool = f 2 |}]

*******************************
****** GOSPEL translation *****
*******************************
(*@ open Gospelstdlib *)

(*@ function rec f ... *)
File "t8.mli", line 1, characters 35-36:
Error: This term has type `integer' but a term was expected of type `bool'.
